# mystry-agents

./: README.md  game.example.yml  game_experience.md  pyproject.toml
docs/: IMAGE_GENERATION.md
src/mystery_agents/: cli.py
src/mystery_agents/agents/: a1_config.py  a2_world.py  a3_5_character_images.py  a3_characters.py  a4_relationships.py  a5_crime.py  a8_5_host_images.py  a8_content.py  a9_packaging.py  v1_world_validator.py
src/mystery_agents/graph/: workflow.py
src/mystery_agents/locales/de/: ui.json
src/mystery_agents/locales/en/: ui.json
src/mystery_agents/locales/es/: ui.json
src/mystery_agents/locales/he/: ui.json
src/mystery_agents/locales/it/: ui.json
src/mystery_agents/models/: state.py
src/mystery_agents/utils/: constants.py  i18n.py  image_generation.py  pdf_generator.py  prompts.py  translation.py
tests/integration/: test_agents_integration.py  test_cli.py  test_workflow.py
tests/unit/: test_agents.py  test_character_image_agent.py  test_config_yaml.py  test_killer_selection_agent.py  test_state_helpers.py
